# rust-rental-mobil

./: .env  Cargo.toml
src/: main.rs
src/config/: database.rs  jwt.rs
src/handlers/: auth_handler.rs  booking_handler.rs  car_handler.rs  mod.rs  payment_handler.rs  user_handler.rs
src/models/: admin_log.rs  auth.rs  booking.rs  car.rs  mod.rs  payment.rs  review.rs  user.rs
src/repositories/: booking_repository.rs  car_repository.rs  mod.rs  payment_repository.rs  user_repository.rs
src/routes/: auth_routes.rs  booking_routes.rs  car_routes.rs  mod.rs  payment_routes.rs  user_routes.rs
src/services/: auth_service.rs
