[package]
name = "rental-mobil"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "tls-native-tls", "mysql", "time", "chrono", "macros", "rust_decimal"] }
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.32", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
